--- a/devstack.yaml
+++ b/devstack.yaml
@@ -1,9 +1,10 @@
 ---
-- hosts: default
+- hosts: localhost
   vars:
-    devstack_repo: git://github.com/openstack-dev/devstack.git
+    git_base: https://github.com
     public_ip: 192.168.27.100
-    version: stable/icehouse
+    version: "{{ ansible_env.OS_VERSION }}"
+    cirros_arch: "{{ ansible_env.CIRROS_ARCH }}"
     neutron: True
     swift: True
     security_groups: False
@@ -24,9 +25,13 @@
     - name: install git
       apt: "name=git update_cache=yes"
       sudo: True
+      
+    - name: git config https instead git
+      command: git config --global url."https://".insteadOf git://
+      sudo: True
 
     - name: checkout devstack
-      git: "repo={{ devstack_repo }} dest=/home/vagrant/devstack version={{ version }}"
+      git: "repo={{ git_base }}/openstack-dev/devstack.git dest=/home/vagrant/devstack version={{ version }}"
 
     - name: local.conf
       template: src=templates/local.conf.j2 dest=/home/vagrant/devstack/local.conf
