--- a/devstack.yaml
+++ b/devstack.yaml
@@ -37,8 +37,8 @@
       apt: "name=git update_cache=yes"
       sudo: True
 
-    - name: install qemu-tools
-      apt: "name=qemu-tools update_cache=yes"
+    - name: install qemu-utils
+      apt: "name=qemu-utils update_cache=yes"
       sudo: True
       
     - name: install kpartx
@@ -49,7 +49,7 @@
       apt: "name=lxc update_cache=yes"
       sudo: True
       when: use_lxc
-      
+            
     - name: git config https instead git
       command: git config --global url."https://".insteadOf git://
       sudo: True
@@ -60,10 +60,27 @@
     - name: checkout diskimage-builder
       git: "repo={{ git_base }}/openstack/diskimage-builder.git dest=/opt/stack/diskimage-builder version=master"
       when: dib
+ 
+    - name: install python-pip
+      apt: "name=python-pip update_cache=yes"
+      sudo: True
+      when: dib
 
+    - name: install dib-utils
+      command: pip install dib-utils
+      sudo: True
+      when: dib
+      
     - name: checkout tripleo-image-elements
       git: "repo={{ git_base }}/openstack/tripleo-image-elements.git dest=/opt/stack/tripleo-image-elements version=master"
       when: dib
+      
+    - name: checkout trove-guest-image-elements
+      git: "repo={{ git_base }}/denismakogon/trove-guest-image-elements.git dest=/opt/stack/trove-guest-image-elements version=master"
+      when: dib and trove
+      
+    - name: add percona key
+      apt_key: keyserver=pool.sks-keyservers.net id=1C4CBDCDC2EFD2A state=present
       
     - name: checkout designate
       git: "repo={{ git_base }}/openstack/designate.git dest=/opt/stack/designate version={{ version }}"
